# toucans

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
common/: fields.py  models.py
common/templatetags/: base_tags.py  table_tags.py
frontend/: package-lock.json  package.json  webpack.config.js
frontend/src/: index.js
frontend/src/js/: divison_tables.js  hamburger.js
frontend/src/scss/: _custom.scss  app.scss  settings.scss
frontend/static_src/: ieconfig.xml  robots.txt
frontend/static_src/js/: badges_tabs.js
home/: fields.py  models.py
home/migrations/: 0003_auto_20181230_1605.py  0004_schedulepage.py  0005_auto_20181231_1710.py  0006_auto_20181231_2115.py  0007_auto_20190101_1440.py  0008_auto_20190101_1459.py  0009_auto_20190101_1803.py  0010_auto_20190102_0908.py  0011_auto_20190102_0922.py  0012_auto_20190102_0930.py  0013_auto_20190112_1153.py  0014_blogpage_cover_invert_title.py  0015_auto_20190112_1400.py  0016_auto_20190113_1318.py  0017_standingsindexpage_standingspage.py  0018_auto_20190306_1333.py  0019_auto_20190306_1345.py  0020_auto_20190306_1352.py  0021_auto_20190306_1354.py  0022_auto_20190306_1355.py  0023_auto_20190306_1651.py  0024_auto_20190306_1654.py  0025_auto_20190306_1657.py  0026_auto_20190306_1703.py  0027_auto_20190307_1412.py  0028_auto_20190307_1422.py  0029_auto_20190307_2153.py  0030_standingsindexpage_description.py  0031_resourcepage.py  0032_resourcerelatedlink.py  0033_genericpage_genericrelatedlink.py  0034_remove_genericpage_description.py  0035_genericpage_page_title.py  0036_resourcepage_page_title.py  0037_auto_20190312_1457.py  0038_auto_20190312_1501.py  0039_auto_20190312_1504.py  0040_auto_20190312_1504.py  0041_auto_20190312_1511.py  0042_auto_20190312_1515.py  (+24 more)
home/templatetags/: table_tags.py
static/: robots.txt
static/scss/: _custom.scss  _timeline.scss  app.scss  settings.scss
toucans/: urls.py  wsgi.py
toucans/components/: bower.json
toucans/settings/: .env.example  .gitignore  .postgres.env.example  .toucans.env.example  base.py  dev.py  storage_backends.py
toucans/templates/: 400.html  403.html  404.html  500.html  base.html  robots.txt
(+39 files in other folders)
