[tool.poetry]
name = "toucans"
version = "1.0.0"
description = "The official website for the TOUCAN Challenge Archery League in the UK"
authors = ["David <david@tankski.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.15"
wagtail = "2.16.2"
psycopg2 = "2.9.3"
django-taggit-templatetags2 = "^1.6.1"
python-dateutil = "^2.8.0"
soupsieve = "^1.9.3"
Pillow = "9.2.0"
django-environ = "^0.9.0"
django-storages = "^1.13.2"
boto3 = "^1.26.74"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
