[tool.poetry]
name = "toucans"
version = "1.0.0"
description = "The official website for the TOUCAN Challenge Archery League in the UK"
authors = ["David <david@tankski.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.15"
wagtail = "6.1.3"
psycopg2 = "^2.9.3"
django-taggit-templatetags2 = "^1.6.1"
python-dateutil = "^2.8.0"
soupsieve = "^1.9.3"
Pillow = "^10.0.1"
django-environ = "^0.9.0"
django-storages = "^1.13.2"
boto3 = "^1.26.74"
djangorestframework = "3.15.2"
requests = "^2.31.0"
sqlparse = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
