[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toucans"
version = "1.0.0"
description = "The official website for the TOUCAN Challenge Archery League in the UK"
authors = [{ name = "David", email = "david@tankski.co.uk" }]
requires-python = "~=3.10"
license = "MIT"
dependencies = [
    "Django>=4.2.16,<5",
    "wagtail==6.1.3",
    "psycopg2>=2.9.3,<3",
    "django-taggit-templatetags2>=1.6.1,<2",
    "python-dateutil>=2.8.0,<3",
    "soupsieve>=1.9.3,<2",
    "Pillow>=10.0.1,<11",
    "django-environ>=0.9.0,<0.10",
    "django-storages>=1.13.2,<2",
    "boto3>=1.26.74,<2",
    "djangorestframework==3.15.2",
    "requests>=2.31.0,<3",
    "sqlparse>=0.5.0,<0.6",
    "setuptools>=75.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
docker = [
    "gunicorn==19",
]
